# box2d-jni

./: CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/workflows/: build.yml  publish-release.yml  publish-snapshot.yml  publish-wasm-npm.yml
box2d-jni/: build.gradle.kts  settings.gradle.kts
box2d-jni/box2d-jni/: build.gradle.kts
box2d-jni/box2d-jni-android/: build.gradle.kts
box2d-jni/box2d-jni-android/src/main/java/de/fabmax/box2dandroid/: DefaultTaskManager.java  Loader.java
box2d-jni/box2d-jni-natives-linux/: build.gradle.kts
box2d-jni/box2d-jni-natives-linux-arm64/: build.gradle.kts
box2d-jni/box2d-jni-natives-linux-arm64/src/main/java/de/fabmax/box2djni/linuxarm64/: NativeLibLinuxArm64.java
box2d-jni/box2d-jni-natives-linux/src/main/java/de/fabmax/box2djni/linux/: NativeLibLinux.java
box2d-jni/box2d-jni-natives-macos/: build.gradle.kts
box2d-jni/box2d-jni-natives-macos-arm64/: build.gradle.kts
box2d-jni/box2d-jni-natives-macos-arm64/src/main/java/de/fabmax/box2djni/macosarm/: NativeLibMacosArm64.java
box2d-jni/box2d-jni-natives-macos-arm64/src/main/java/de/fabmax/box2djni/macosarm64/: NativeLibMacosArm64.java
box2d-jni/box2d-jni-natives-macos/src/main/java/de/fabmax/box2djni/macos/: NativeLibMacos.java
box2d-jni/box2d-jni-natives-windows/: build.gradle.kts
box2d-jni/box2d-jni-natives-windows-arm64/: build.gradle.kts
box2d-jni/box2d-jni-natives-windows-arm64/src/main/java/de/fabmax/box2djni/windowsarm64/: NativeLibWindowsArm64.java
box2d-jni/box2d-jni-natives-windows/src/main/java/de/fabmax/box2djni/windows/: NativeLibWindows.java
box2d-jni/box2d-jni/src/main/java/de/fabmax/box2djni/: DefaultTaskManager.java  Loader.java  NativeLib.java  Platform.java
box2d-jni/box2d-jni/src/test/java/de/fabmax/box2djni/: Box2dVersionTest.java  FilterCallbackTest.java
box2d-jni/gradle/: libs.versions.toml
box2d-native/: CMakeLists.txt
box2d-native/src/webidl/: B2Base.idl  B2_Base.idl  B2_Body.idl  B2_CharacterMover.idl  B2_Collision.idl  B2_Distance.idl  B2_Geometry.idl  B2_Joint.idl  B2_Math.idl  B2_Shape.idl  B2_World.idl
box2d-native/src/webidlbindings/: B2Base.hpp  B2Math.hpp  B2_Base.hpp  B2_Body.hpp  B2_CharacterMover.hpp  B2_Collision.hpp  B2_Distance.hpp  B2_DistanceJoint.hpp  B2_FilterJoint.hpp  B2_Geometry.hpp  B2_Joint.hpp  B2_Math.hpp  B2_MotorJoint.hpp  B2_MouseJoint.hpp  B2_PrismaticJoint.hpp  B2_RevoluteJoint.hpp  B2_Shape.hpp  B2_WeldJoint.hpp  B2_WheelJoint.hpp  B2_World.hpp  CMakeLists.txt  EnkiTS_integration.hpp  TaskManager.hpp
box2d-native/src/webidlbindings/jni/: box2d.cpp  box2dGlue.h  box2d_jni.cpp
box2d-native/src/webidlbindings/wasm/: box2d.idl  box2d_wasm.cpp
box2d-wasm/: docker-compose.yaml  generate_release.sh  make.sh
src/: main.cpp
